# street_group_tech_test

./: .gitignore  404.html  README.md  download_data.sh  index.html  mkdocs.yaml  prospector.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml
analyse_properties/: __init__.py  debug.py  main.py
dataflow/: index.html  scaling.html
discussion/: approach.html  cleaning.html  exploration.html  introduction.html  results.html
docs/: index.md
docs/dataflow/: index.md  scaling.md
docs/discussion/: approach.md  cleaning.md  exploration.md  introduction.md  results.md
docs/documentation/: installation.md  usage.md
documentation/: installation.html  usage.html
exploration/: price_paid_data_report.html  report.py
notes/: commands.md  dataflow.md  docker-commands-spark.txt  links.md
notes/documentation/: answers.md  beam_docs.md  dataflow.md
notes/tmp/: errordata  exampledata  runningdata
search/: search_index.json
